; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/macintosh/extr_via-pmu.c_pmu_release.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/macintosh/extr_via-pmu.c_pmu_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.file = type { %struct.pmu_private* }
%struct.pmu_private = type { i64, i32 }

@all_pvt_lock = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.file*)* @pmu_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pmu_release(%struct.inode* %0, %struct.file* %1) #0 {
  %3 = alloca %struct.inode*, align 8
  %4 = alloca %struct.file*, align 8
  %5 = alloca %struct.pmu_private*, align 8
  %6 = alloca i64, align 8
  store %struct.inode* %0, %struct.inode** %3, align 8
  store %struct.file* %1, %struct.file** %4, align 8
  %7 = load %struct.file*, %struct.file** %4, align 8
  %8 = getelementptr inbounds %struct.file, %struct.file* %7, i32 0, i32 0
  %9 = load %struct.pmu_private*, %struct.pmu_private** %8, align 8
  store %struct.pmu_private* %9, %struct.pmu_private** %5, align 8
  %10 = load %struct.pmu_private*, %struct.pmu_private** %5, align 8
  %11 = icmp ne %struct.pmu_private* %10, null
  br i1 %11, label %12, label %24

12:                                               ; preds = %2
  %13 = load %struct.file*, %struct.file** %4, align 8
  %14 = getelementptr inbounds %struct.file, %struct.file* %13, i32 0, i32 0
  store %struct.pmu_private* null, %struct.pmu_private** %14, align 8
  %15 = load i64, i64* %6, align 8
  %16 = call i32 @spin_lock_irqsave(i32* @all_pvt_lock, i64 %15)
  %17 = load %struct.pmu_private*, %struct.pmu_private** %5, align 8
  %18 = getelementptr inbounds %struct.pmu_private, %struct.pmu_private* %17, i32 0, i32 1
  %19 = call i32 @list_del(i32* %18)
  %20 = load i64, i64* %6, align 8
  %21 = call i32 @spin_unlock_irqrestore(i32* @all_pvt_lock, i64 %20)
  %22 = load %struct.pmu_private*, %struct.pmu_private** %5, align 8
  %23 = call i32 @kfree(%struct.pmu_private* %22)
  br label %24

24:                                               ; preds = %12, %2
  ret i32 0
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @list_del(i32*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1

declare dso_local i32 @kfree(%struct.pmu_private*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
